--- a/html/index.html
+++ b/html/index.html
@@ -6,9 +6,17 @@
 <body>
   <div id="image">
   </div>
+  <!--
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
   <script>
   $('#image').prepend('<p>HI</p>');
   $('#image').append('<img src="https://s3.amazonaws.com/learn-verified/painting-with-dog.gif"/>');
   </script>
+  -->
+  <script>
+  let img = document.createElement('img');
+  img.src = "https://s3.amazonaws.com/learn-verified/painting-with-dog.gif";
+  document.getElementById('image').append(img);
+  </script>
+
 </body>
